# cerebras_eval

./: .gitignore  PUSH_INSTRUCTIONS.md  README.md  cerebras_chat.py  eval.jsonl  main.py  push_to_remote.sh  pyproject.toml  requirements.txt
