[project]
name = "cerebras-cli"
version = "0.1.0"
description = "A command-line interface for calling the Cerebras OpenAI-compatible chat API with built-in comparison and scoring capabilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.34.0",
    "requests>=2.31.0",
]
